--- a/rustlisp-wasm/index.html
+++ b/rustlisp-wasm/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
+    <meta name="viewport" content="width=device-width" />
   </head>
   <body style="display: flex; flex-direction: column; align-items: center;">
     <div style="display: flex; gap: 0.5em; flex-direction: column; width: 100%; max-width: 968px;">
