Replace code element with pre in WASM build
The pre-formatting is required for error traces/multi-line output.

--- a/rustlisp-wasm/index.html
+++ b/rustlisp-wasm/index.html
@@ -11,7 +11,7 @@
       </div>
       <textarea id="input" rows=10 style="resize: none;"></textarea>
       <button id="submit">Submit</button>
-      <code id="output"></code>
+      <pre style="margin: 0;" id="output"></pre>
     </div>
 
     <style>
