Add error trace example

--- a/rustlisp-wasm/index.html
+++ b/rustlisp-wasm/index.html
@@ -13,16 +13,16 @@
       <textarea id="input" rows=16 style="resize: none;"></textarea>
       <button id="submit">Submit</button>
       <div style="display: flex; flex-direction: row; border-bottom: 1px solid #AAA; padding-bottom: 0.5em;">
-        <strong style="margin-bottom: 0.25em">Expression:&nbsp;</strong>
+        <strong style="margin-bottom: 0.25em" title="The result of the last successful expression">Expression:&nbsp;</strong>
         <pre style="margin: 0;" id="expression"></pre>
       </div>
       <div style="display: flex; flex: 1;">
         <div style="flex: 1; display: flex; flex-direction: column;">
-          <strong style="margin-bottom: 0.25em">Output</strong>
+          <strong style="margin-bottom: 0.25em" title="Represents standard output">Output</strong>
           <pre style="margin: 0;" id="output"></pre>
         </div>
         <div style="flex: 1; display: flex; flex-direction: column; border-left: 1px solid #AAA; padding-left: 0.5em;">
-          <strong style="margin-bottom: 0.25em">Error</strong>
+          <strong style="margin-bottom: 0.25em" title="Represents standard error">Error</strong>
           <pre style="margin: 0; color: white; background-color: #f04f43;" id="error"></pre>
         </div>
       </div>
